<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SistemaPrestamoLibro</string>
    <string name="action_settings">Settings</string>
    <string name="TODO"></string>
    <string name="title_activity_area_insertar">AreaInsertarActivity</string>
    <string name="title_activity_area_consultar">AreaConsultarActivity</string>
    <string name="title_activity_area_actualizar">AreaActualizarActivity</string>
    <string name="title_activity_area_eliminar">AreaEliminarActivity</string>
    <string name="title_activity_documento_insertar">DocumentoInsertarActivity</string>
    <string name="title_activity_documento_actualizar">DocumentoActualizarActivity</string>
    <string name="title_activity_documento_eliminar">DocumentoEliminarActivity</string>
    <string name="title_activity_documento_consultar">DocumentoConsultarActivity</string>
    <string name="title_activity_area_menu">AreaMenuActivity</string>
    <string name="title_activity_documento_menu">DocumentoMenuActivity</string>
    <string name="ingrese_la_categoria">Ingrese la Categoria</string>
    <string name="nombrearea">Nombre del Area</string>
    <string name="ingrese_el_id_">ingrese el id:</string>
    <string name="limpiar">Limpiar Texto</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="insertar">Insertar</string>
    <string name="titulo">Titulo:</string>
    <string name="editorial">Editorial:</string>
    <string name="categoria_">Id Categoria:</string>
    <string name="tipodoc">Id Tipo doc</string>
    <string name="autor">Escritor:</string>
    <string name="title_activity_menu_iconos">MenuIconosActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="autorbtn">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sistema">SISTEMA DE PRESTAMOS DE LIBROS Y TESIS</string>
    <string name="usuario">Nombre de Usuario:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="loguea">Ingresar</string>
    <string name="salir">Salir</string>
    <string name="InsBD">Llenar Base</string>
    <string name="title_activity_menu_crud">MenuCRUDActivity</string>
    <string name="title_activity_prestamo_actualizar">PrestamoActualizarActivity</string>
    <string name="title_activity_prestamo_consutar">PrestamoConsutarActivity</string>
    <string name="title_activity_prestamo_eliminar">PrestamoEliminarActivity</string>
    <string name="title_activity_prestamo_insertar">PrestamoInsertarActivity</string>
    <string name="codPrestamo">Código Préstamo:</string>
    <string name="facultad">Facultad:</string>
    <string name="fechaPrest">Fecha Préstamo:</string>
    <string name="fechaDevol">Fecha Devol:</string>
    <string name="cantPrest">Cantidad Prestada:</string>
    <string name="estado">Estado:</string>
    <string name="title_activity_prestamo_menu">PrestamoMenuActivity</string>
    <string name="title_activity_usuario_actualizar">UsuarioActualizarActivity</string>
    <string name="title_activity_usuario_consultar">UsuarioConsultarActivity</string>
    <string name="title_activity_usuario_eliminar">UsuarioEliminarActivity</string>
    <string name="title_activity_usuario_insertar">UsuarioInsertarActivity</string>
    <string name="carnet">Carnet:</string>
    <string name="nombAlum">Nombre Alumno:</string>
    <string name="apelAlum">Apellido Alumno:</string>
    <string name="direccion">Direccion:</string>
    <string name="telefono">Telefono:</string>
    <string name="title_activity_usuario_menu">UsuarioMenuActivity</string>
    <string name="title_activity_autor_actualizar">AutorActualizarActivity</string>
    <string name="title_activity_autor_consultar">AutorConsultarActivity</string>
    <string name="title_activity_autor_eliminar">AutorEliminarActivity</string>
    <string name="title_activity_autor_insertar">AutorInsertarActivity</string>
    <string name="title_activity_autor_menu">AutorMenuActivity</string>
    <string name="title_activity_detalle_autor_actualizar">DetalleAutorActualizarActivity</string>
    <string name="title_activity_detalle_autor_consultar">DetalleAutorConsultarActivity</string>
    <string name="title_activity_detalle_autor_eliminar">DetalleAutorEliminarActivity</string>
    <string name="title_activity_detalle_autor_insertar">DetalleAutorInsertarActivity</string>
    <string name="title_activity_detalle_autor_menu">DetalleAutorMenuActivity</string>
    <string name="title_activity_prestamo_consultar">PrestamoConsultarActivity</string>
    <string name="nomtipo">Tipo de Documento</string>
    <string name="title_activity_tipo_menu">TipoMenuActivity</string>
    <string name="title_activity_tipo_insertar">TipoInsertarActivity</string>
    <string name="title_activity_tipo_eliminar">TipoEliminarActivity</string>
    <string name="title_activity_tipo_actualizar">TipoActualizarActivity</string>
    <string name="title_activity_tipo_consultar">TipoConsultarActivity</string>
    <string name="cod_doc">Codigo Documento</string>
    <string name="cod_pres">Codigo Prestamo</string>
    <string name="prestamo">Numero de Prestamo</string>
    <string name="maximo">Maximo de Prestamo</string>
    <string name="title_activity_detalle_pres_menu">DetallePresMenuActivity</string>
    <string name="title_activity_detalle_pres_insertar">DetallePresInsertarActivity</string>
    <string name="title_activity_detalle_pres_eliminar">DetallePresEliminarActivity</string>
    <string name="title_activity_detalle_pres_actualizar">DetallePresActualizarActivity</string>
    <string name="title_activity_detalle_pres_consultar">DetallePresConsultarActivity</string>

</resources>
