<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="30dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/codPrestamo"/>
<EditText
android:id="@+id/editCodPrestamo"
android:inputType="text"
android:maxLength="7" />
</TableRow>

<TableRow>
<TextView android:text="@string/carnet" />
<EditText
android:id="@+id/editCarneAlum"
android:inputType="text"
android:maxLength="7" />
</TableRow>

<TableRow>
<TextView android:text="@string/facultad" />
<EditText
android:id="@+id/editFacultad"
android:inputType="text"
android:maxLength="30" />
</TableRow>

<TableRow>
<TextView android:text="@string/fechaPrest" />
<EditText
android:id="@+id/editFechaPrest"
android:inputType="text"
android:maxLength="8" />
</TableRow>

<TableRow>
<TextView android:text="@string/fechaDevol" />
<EditText
android:id="@+id/editFechaDevol"
android:inputType="text"
android:maxLength="8" />
</TableRow>

<TableRow>
<TextView android:text="@string/cantPrest" />
<EditText
android:id="@+id/editcantPrest"
android:inputType="text"
android:maxLength="8" />
</TableRow>

<TableRow>
<TextView android:text="@string/estado" />
<EditText
android:id="@+id/editEstado"
android:inputType="text"
android:maxLength="8" />
</TableRow>

<TableRow>
<Button
android:onClick="insertarAlumno"
android:text="@string/insertar" />
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar" />
</TableRow>

</TableLayout>
