<?xml version="1.0" encoding="utf-8"?>
  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:paddingTop="10dip"
   android:stretchColumns="1" >
 <TableRow>
   <TextView android:text="@string/ingrese_el_id_" />
    <EditText
      android:id="@+id/editidlibro"
      android:inputType="text"
      android:maxLength="4" />
 </TableRow>
 <TableRow>
   <TextView android:text="@string/categoria_" />
    <EditText
      android:id="@+id/editidcatg"
      android:inputType="text"
      android:maxLength="3" />
 </TableRow>
 <TableRow>
   <TextView android:text="@string/titulo" />
   <EditText
    android:id="@+id/editTitulo"
    android:inputType="text"
    android:maxLength="30" />
</TableRow>
 <TableRow>
   <TextView android:text="@string/editorial" />
    <EditText
      android:id="@+id/edit_orial"
      android:inputType="text"
      android:maxLength="10" />
 </TableRow>
 <TableRow>
   <TextView android:text="@string/autor" />
   <EditText
    android:id="@+id/editAutor"
    android:inputType="text"
    android:maxLength="20" />
</TableRow>
<TableRow android:gravity="center">
<Button
android:onClick="insertarDoc"
android:text="@string/insertar" />
</TableRow>
<TableRow android:gravity="center">
    
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar"
 />
</TableRow>
</TableLayout>
