<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:stretchColumns="1" >
<TableRow>
<TextView android:text="@string/carnet" />
<EditText
android:id="@+id/editCarnet"
android:inputType="text"
android:maxLength="7" />
</TableRow>
<TableRow>
<TextView android:text="@string/nombAlum" />
<EditText
android:id="@+id/editNombre"
android:inputType="text"
android:maxLength="30" />
</TableRow>
<TableRow>
<TextView android:text="@string/apelAlum" />
<EditText
android:id="@+id/editApellido"
android:inputType="text"
android:maxLength="30" />
</TableRow>
<TableRow>
<Button
android:onClick="actualizarAlumno"
android:text="@string/actualizar" />
</TableRow>
<TableRow>
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar" />
</TableRow>
</TableLayout>
