<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/cod_doc" />

        <EditText
            android:id="@+id/editCodDetalle"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/cod_pres" />

        <EditText
            android:id="@+id/editCodPresDetalle"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/prestamo" />

        <EditText
            android:id="@+id/editNumPrestDetalle"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/maximo" />

        <EditText
            android:id="@+id/editMaxDetalle"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>

    <TableRow >
        <Button 
            android:onClick="insertarDetallePrest"
            android:text="@string/insertar"/>
        <Button 
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>

</TableLayout>
