<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">
    
    <TableRow>
        <TextView android:text="@string/cod_doc"/>
        <EditText
            android:id="@+id/editCodDocDetalle"
            android:inputType="text"
            android:maxLength="4"/>
    </TableRow>
    
    <TableRow >
        <TextView android:text="@string/cod_pres"/>
        <EditText 
            android:id="@+id/editCodPresDetalle"
            android:inputType="text"
            android:maxLength="6"/>
    </TableRow>
    
    <TableRow >
        <TextView android:text="@string/prestamo"/>
        <EditText 
            android:id="@+id/editPrestamoDetalle"
            android:inputType="text"
            android:maxLength="1"/>
    </TableRow>
    
    <TableRow >
        <TextView android:text="@string/maximo"/>
        <EditText 
            android:id="@+id/editMaximoDetalle"
            android:inputType="text"
            android:maxLength="1"/>
    </TableRow>
    
    <TableRow >
        <Button 
            android:onClick="actualizarDetalle"
            android:text="@string/actualizar"/>
    </TableRow>
    
    <TableRow >
        <Button 
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>

