<?xml version="1.0" encoding="utf-8"?>
  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:paddingTop="10dip"
   android:stretchColumns="1" >
 <TableRow>
   <TextView android:text="@string/categoria_" />
    <EditText
      android:id="@+id/editIdarea"
      android:inputType="text"
      android:maxLength="3" />
 </TableRow>
 <TableRow>
   <TextView android:text="@string/nombrearea" />
   <EditText
    android:id="@+id/editNomarea"
    android:inputType="text"
    android:maxLength="20" />
</TableRow>
<TableRow >
<Button
android:onClick="actualizarArea"
android:text="@string/actualizar" />
</TableRow>
<TableRow>
<Button
android:onClick="limpiarTexto"
android:text="@string/limpiar" />
</TableRow>
</TableLayout>