<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    
    <TableRow >
        <TextView android:text="@string/tipodoc"/>
        <EditText 
            android:id="@+id/editIdTipo"
            android:inputType="text"
            android:maxLength="2"/>
    </TableRow>
    
    <TableRow >
        <TextView android:text="@string/nomtipo"/>
        <EditText
            android:id="@+id/editNomTipo"
            android:inputType="text"
            android:maxLength="10"/>
    </TableRow>

    <TableRow >
        <Button 
            android:onClick="insertarTipo"
            android:text="@string/insertar"/>
        <Button 
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"/>
    </TableRow>
</TableLayout>

