<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/ingrese_el_id_"/>
<EditText
android:id="@+id/editidlibro"
android:layout_width="200dp"
android:layout_height="wrap_content"
android:inputType="text"
android:maxLength="3"/>
<LinearLayout
android:id="@+id/linearLayout1"
android:layout_width="fill_parent"
android:layout_height="wrap_content" >
<Button
android:id="@+id/botonConsultar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/consultar"
android:onClick="consultarDoc"/>
<Button
android:id="@+id/botonLimpiar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/limpiar"
android:onClick="limpiarTexto"/>
</LinearLayout>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/categoria_" />
<EditText
android:id="@+id/editidcatg"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="text"
android:enabled ="false"
android:focusable="false"
android:focusableInTouchMode="false"
android:cursorVisible="false"
android:longClickable="false" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/titulo" />
<EditText
android:id="@+id/editTitulo"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="text"
android:enabled ="false"
android:focusable="false"
android:focusableInTouchMode="false"
android:cursorVisible="false"
android:longClickable="false" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/editorial" />
<EditText
android:id="@+id/edit_orial"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="text"
android:enabled ="false"
android:focusable="false"
android:focusableInTouchMode="false"
android:cursorVisible="false"
android:longClickable="false" />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/autor" />
<EditText
android:id="@+id/editAutor"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:inputType="text"
android:enabled ="false"
android:focusable="false"
android:focusableInTouchMode="false"
android:cursorVisible="false"
android:longClickable="false" />
</LinearLayout>


