<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipodoc"/>
    <EditText 
        android:id="@+id/editIdTipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="2"/>
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:onClick="eliminarTipoDocumento"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:onClick="limpiarTexto"
        android:text="@string/limpiar"/>
</LinearLayout>
