<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondolibro"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:text="@string/sistema"
        android:shadowColor="#6B9A6C"
        android:shadowRadius="1.5"
        android:shadowDx="1"
        android:shadowDy="2"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="60dp"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="9dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:background="@drawable/fondocaja2"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

 <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/contrasena" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="9dp"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:background="@drawable/fondocaja"
        android:inputType="textPassword">

        <requestFocus />
        </EditText>

    <Button
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/botonlogin"
        android:drawableLeft="@drawable/lgn"
        android:text="@string/loguea" 
        android:textSize="12sp"/>

</RelativeLayout>